profilelist1exp/unpackaged/objects/Budgeted_Price_Distribution__c.object
<CustomObject>
    <description>Viper Project</description>
    <fields>
        <fullName>Business_Segment__c</fullName>
        <label>Business Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Corporate Events</fullName>
                </value>
                <value>
                    <fullName>Global Business</fullName>
                </value>
                <value>
                    <fullName>Int&apos;l</fullName>
                </value>
                <value>
                    <fullName>Large Business</fullName>
                </value>
                <value>
                    <fullName>Medium Business</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Client Peripherals</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Displays</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Enterprise</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Imaging</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Operations</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Software</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Small Business</fullName>
                </value>
                <value>
                    <fullName>WWP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSMR__c</fullName>
        <label>CSMR</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Volume Based</fullName>
                </value>
                <value>
                    <fullName>Ala Carte</fullName>
                </value>
                <value>
                    <fullName>Headcount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LE__c</fullName>
        <label>LE</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PUB__c</fullName>
        <label>PUB</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SMB__c</fullName>
        <label>SMB</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Budgeted Price Distribution</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Business_Segment__c</columns>
        <columns>Contract_Type__c</columns>
        <columns>LE__c</columns>
        <columns>PUB__c</columns>
        <columns>SMB__c</columns>
        <columns>CSMR__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BPD-{000}</displayFormat>
        <label>Budgeted Price Distribution Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budgeted Price Distributions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Viper_Budgeted_Distribution_Equals_100</fullName>
        <active>true</active>
        <description>This validation rule ensures that when added up, all the Budgeted Price Distribution fields will only add up to 100%.</description>
        <errorConditionFormula>OR (
CSMR__c + LE__c + SMB__c + PUB__c &gt; 1,
CSMR__c + LE__c + SMB__c + PUB__c &lt; 1
)</errorConditionFormula>
        <errorMessage>The Budgeted Price Distribution for all 4 segments should add up to 100%.</errorMessage>
    </validationRules>
</CustomObject>